modified:   api/index.py modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/api/index" }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "35 10 * * *" //4.05p.m IST
+    }
   ]
 }
+
