new file:   api/backup_cron.py modified:   api/cron.py modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,11 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "05 11 * * *" 
+      "schedule": "30 1 * * *" 
+    },
+    {
+      "path": "/api/backup_cron",
+      "schedule": "30 2 * * *" 
     }
   ]
 }
