modified:   .gitignore 	renamed:    api/.sample.env -> .sample.env 	modified:   README.md 	deleted:    api/index.py 	new file:   app.py 	new file:   blueprints/__init__.py 	new file:   blueprints/api_v1.py 	new file:   blueprints/auth.py 	new file:   blueprints/core.py 	new file:   blueprints/dashboard.py 	new file:   blueprints/orders.py 	new file:   blueprints/search.py 	modified:   docs/index.html 	modified:   requirements.txt 	renamed:    api/static/android-chrome-192x192.png -> static/favicon/android-chrome-192x192.png 	renamed:    api/static/apple-touch-icon.png -> static/favicon/apple-touch-icon.png 	renamed:    api/static/browserconfig.xml -> static/favicon/browserconfig.xml 	renamed:    api/static/favicon-16x16.png -> static/favicon/favicon-16x16.png 	renamed:    api/static/favicon-32x32.png -> static/favicon/favicon-32x32.png 	renamed:    api/static/favicon.ico -> static/favicon/favicon.ico 	new file:   static/favicon/logo.png 	renamed:    api/static/mstile-150x150.png -> static/favicon/mstile-150x150.png 	renamed:    api/static/safari-pinned-tab.svg -> static/favicon/safari-pinned-tab.svg 	renamed:    api/static/site.webmanifest -> static/favicon/site.webmanifest 	renamed:    api/templates/base.html -> templates/base.html 	renamed:    api/templates/dashboard.html -> templates/dashboard.html 	renamed:    api/templates/holdings.html -> templates/holdings.html 	renamed:    api/templates/index.html -> templates/index.html 	renamed:    api/templates/login.html -> templates/login.html 	renamed:    api/templates/orderbook.html -> templates/orderbook.html 	renamed:    api/templates/positions.html -> templates/positions.html 	renamed:    api/templates/search.html -> templates/search.html 	renamed:    api/templates/token.html -> templates/token.html 	renamed:    api/templates/tradebook.html -> templates/tradebook.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-.vercel
-*.log
+.env
+.flaskenv
 *.pyc
-__pycache__
+__pycache__/
+instance/
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+.python-version
+node_modules/
+build/
+dist/
+*.egg-info/
+*.db
+*.sqlite
+*.log
+*.tmp
+
 
 # Environments 
 .env 
