modified:   .sample.env

--- a/.sample.env
+++ b/.sample.env
@@ -4,7 +4,7 @@ BROKER_USERNAME = '<broker_username>'
 BROKER_PIN = '<broker_pin>'
 BROKER_TOKEN = '<broker_token>'
 
-# Login Credentials
+#OpenAlgo Login Credentials
 LOGIN_USERNAME = '<login_username>'
 LOGIN_PASSWORD = '<login_password>'
 
