modified:   app.py 	modified:   blueprints/api_v1.py 	modified:   blueprints/apikey.py 	modified:   blueprints/auth.py 	new file:   limiter.py 	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 Flask
 flask-socketio
+Flask-SQLAlchemy
+flask-bcrypt
+Flask-Limiter
 python-dotenv
 pyotp
 pytz
 requests
 pandas
 pyngrok
-Flask-SQLAlchemy
-flask-bcrypt
 SQLAlchemy
 cachetools
+
+
