--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,48 @@
-Flask
-flask-socketio
-Flask-SQLAlchemy
-flask-bcrypt
-Flask-Limiter
-python-dotenv
-pyotp
-pytz
-requests
-pandas
-pyngrok
-SQLAlchemy
-cachetools
-
-
-numpy>=1.22.2 # not directly required, pinned by Snyk to avoid a vulnerability
-werkzeug>=2.3.8 # not directly required, pinned by Snyk to avoid a vulnerability
+bcrypt==4.1.2
+bidict==0.23.1
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+Deprecated==1.2.14
+Flask==3.0.2
+Flask-Bcrypt==1.0.1
+Flask-Limiter==3.5.1
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+h11==0.14.0
+idna==3.6
+importlib_resources==6.4.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+limits==3.10.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+numpy==1.26.4
+ordered-set==4.1.0
+packaging==24.0
+pandas==2.2.1
+Pygments==2.17.2
+PyJWT==2.8.0
+pyngrok==7.1.5
+pyotp==2.9.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.9.0
+python-socketio==5.11.1
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+simple-websocket==1.0.0
+six==1.16.0
+SQLAlchemy==2.0.28
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.1
+wrapt==1.16.0
+wsproto==1.2.0
