Footer Template Fix and Kotak Base Preparation with PyJWT

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ pandas
 pyngrok
 SQLAlchemy
 cachetools
-
-
+PyJWT==2.8.0
 numpy>=1.22.2 # not directly required, pinned by Snyk to avoid a vulnerability
 werkzeug>=2.3.8 # not directly required, pinned by Snyk to avoid a vulnerability
