--- a/requirements-nginx.txt
+++ b/requirements-nginx.txt
@@ -13,6 +13,7 @@ SQLAlchemy
 cachetools
 gunicorn
 eventlet
+PyJWT==2.8.0
 dnspython>=2.6.1 # not directly required, pinned by Snyk to avoid a vulnerability
 numpy>=1.22.2 # not directly required, pinned by Snyk to avoid a vulnerability
 werkzeug>=2.3.8 # not directly required, pinned by Snyk to avoid a vulnerability
