--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -85,6 +85,6 @@ jobs:
           fi
 
       - name: Push
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
