--- a/.sample.env
+++ b/.sample.env
@@ -1,8 +1,8 @@
 # Broker Configuration
-BROKER_API_KEY = 'YOUR_BROKER_API_KEY'
-BROKER_API_SECRET = 'YOUR_BROKER_API_SECRET'
+#BROKER_API_KEY = 'YOUR_BROKER_API_KEY'
+#BROKER_API_SECRET = 'YOUR_BROKER_API_SECRET'
 
-REDIRECT_URL = 'http://127.0.0.1:5000/<broker>/callback'  # Change if different
+#REDIRECT_URL = 'http://127.0.0.1:5000/<broker>/callback'  # Change if different
 
 # Valid Brokers Configuration
 VALID_BROKERS = 'fivepaisa,aliceblue,angel,dhan,fyers,icici,kotak,shoonya,upstox,zebu,zerodha'
