--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ pytz==2024.1
 PyYAML==6.0.1
 qrcode==8.0
 referencing==0.35.1
-requests==2.32.3
+requests==2.31.0
 rich==13.7.1
 rpds-py==0.20.0
 setuptools==70.3.0
@@ -73,3 +73,4 @@ wrapt==1.16.0
 wsproto==1.2.0
 WTForms==3.1.2
 zipp==3.19.2
+beautifulsoup4
