Add centralized logging mechanism with optional file logging

--- a/.sample.env
+++ b/.sample.env
@@ -162,3 +162,29 @@ CSRF_ENABLED = 'TRUE'
 # Leave empty for no time limit (tokens valid for entire session)
 # Example: 3600 = 1 hour, 86400 = 24 hours
 CSRF_TIME_LIMIT = ''
+
+# OpenAlgo Logging Configuration
+# Set the logging level for the application
+# Available levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# DEBUG: Detailed information, typically of interest only when diagnosing problems
+# INFO: General information about application operation (default)
+# WARNING: Something unexpected happened or indicative of some problem
+# ERROR: Due to a more serious problem, the software has not been able to perform some function
+# CRITICAL: A serious error, indicating that the program itself may be unable to continue running
+LOG_LEVEL = 'INFO'
+
+# Enable file-based logging in addition to console logging
+# Set to TRUE to write logs to files with daily rotation
+# Set to FALSE to only output logs to console (default for lightweight operation)
+# When enabled, logs are written to the 'logs/' directory with automatic rotation
+LOG_TO_FILE = 'FALSE'
+
+# Log output format
+# 'console': Human-readable format with optional colors (default)
+# 'json': Structured JSON format for log aggregation tools
+LOG_FORMAT = 'console'
+
+# Log directory path (only used when LOG_TO_FILE=TRUE)
+# Directory where log files will be stored
+# Will be created automatically if it doesn't exist
+LOG_DIR = 'logs'
