feat(strategy-state): improve Strategy Positions UI and live price handling
- Add computed strategy state summary (realized from trade_history, unrealized from open legs)
- Enhance Strategy Positions screen (live LTP, auto-refresh prefs, per-leg P&L, inline SL/Target overrides)
- Refine useLivePrice LTP source selection with optional debug logging
- Update action center tests to match current DB APIs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -198,6 +198,8 @@ known-first-party = ["broker", "blueprints", "database", "services", "utils", "r
 testpaths = ["test"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
+# Ensure local imports like `import database` work under pytest.
+pythonpath = ["."]
 addopts = "-v --timeout=60"
 filterwarnings = [
     "ignore::DeprecationWarning",
