feat: Add optional Kafka support for order events and notifications
Add configurable Kafka integration for order events and system notifications
while maintaining backward compatibility with existing Socket.IO implementation.
This enables external system integration (ESB, analytics, audit) without
breaking changes to current functionality.

### Key Features
- Event publisher abstraction layer with factory pattern
- Socket.IO implementation (maintains current behavior as default)
- Kafka implementation (new optional mode)
- Environment-based mode switching via ORDER_EVENT_MODE variable
- Comprehensive error handling and automatic resource cleanup

### Changes
- Add utils/event_publisher.py (600+ lines)
  * EventPublisher abstract base class
  * SocketIOEventPublisher for backward compatibility
  * KafkaEventPublisher for Kafka integration
  * EventPublisherFactory with singleton pattern
  * Automatic cleanup on application exit

- Update .sample.env (+38 lines)
  * Add ORDER_EVENT_MODE configuration
  * Add 11 Kafka producer configuration variables
  * Include detailed comments and examples

- Add comprehensive test suite (57 tests, 90%+ coverage target)
  * test/test_event_publisher.py (45 unit tests)
  * test/test_event_publisher_integration.py (12 integration tests)
  * test/README.md (test documentation)
  * test/test_requirements.txt (test dependencies)
  * run_tests.py (convenient test runner)

### Message Types Supported
- order_event: Order placement, modification, cancellation
- analyzer_update: Sandbox/analyzer mode updates
- order_notification: Position matches, system notifications
- master_contract_download: Contract download events
- password_change: Security events

### Configuration
Default mode (no changes required):
  ORDER_EVENT_MODE=SOCKETIO

Optional Kafka mode:
  ORDER_EVENT_MODE=KAFKA
  KAFKA_BOOTSTRAP_SERVERS=localhost:9092
  KAFKA_ORDER_EVENTS_TOPIC=from_openalgo_order_events

### Testing
Run tests: python run_tests.py --coverage
All 57 tests

--- a/.sample.env
+++ b/.sample.env
@@ -70,6 +70,44 @@ WEBSOCKET_URL='ws://127.0.0.1:8765'
 ZMQ_HOST='127.0.0.1'
 ZMQ_PORT='5555'
 
+# Order Event Communication Mode Configuration
+# Controls how order events and system notifications are published
+# Options: SOCKETIO (default) or KAFKA
+# - SOCKETIO: Uses Flask-SocketIO for real-time events (current behavior)
+# - KAFKA: Publishes events to Kafka for external system integration
+ORDER_EVENT_MODE='SOCKETIO'
+
+# Kafka Configuration (Required only if ORDER_EVENT_MODE='KAFKA')
+# Kafka Broker Addresses (comma-separated list)
+# Example: 'localhost:9092' or 'kafka1:9092,kafka2:9092,kafka3:9092'
+KAFKA_BOOTSTRAP_SERVERS='localhost:9092'
+
+# Kafka Topic for Publishing Order Events
+# All order events, notifications, and system alerts will be published to this topic
+KAFKA_ORDER_EVENTS_TOPIC='from_openalgo_order_events'
+
+# Kafka Producer Configuration (Optional - defaults provided)
+# Compression type: none, gzip, snappy, lz4, zstd
+KAFKA_PRODUCER_COMPRESSION='snappy'
+
+# Batch size in bytes (default: 16384 = 16KB)
+# Larger values improve throughput but increase latency
+KAFKA_PRODUCER_BATCH_SIZE='16384'
+
+# Linger time in milliseconds (default: 10ms)
+# Producer waits this long to batch more messages
+KAFKA_PRODUCER_LINGER_MS='10'
+
+# Acknowledgment mode: 0 (no ack), 1 (leader ack), all (full replica ack)
+# 'all' ensures maximum durability (recommended for production)
+KAFKA_PRODUCER_ACKS='all'
+
+# Number of retries for failed sends (default: 3)
+KAFKA_PRODUCER_RETRIES='3'
+
+# Request timeout in milliseconds (default: 30000 = 30 seconds)
+KAFKA_PRODUCER_REQUEST_TIMEOUT_MS='30000'
+
 # WebSocket Connection Pooling Configuration
 # Handles broker symbol limits by automatically creating multiple connections
 # Most brokers limit symbols per WebSocket (Angel: 1000, Zerodha: 3000)
