Address PR review feedback - Critical and High Priority fixes
Critical fixes:
- Added thread limiting env vars to ConfigMap (OPENBLAS, OMP, MKL, NUMEXPR, NUMBA)
- Removed secrets-template.yaml from kustomization.yaml resources
- Changed SECRET_KEY placeholder to __REPLACE_WITH_RANDOM_STRING_REQUIRED__

High priority fixes:
- Increased liveness probe initialDelaySeconds to 120s
- Created networkpolicy.yaml with ingress/egress rules
- Documented WebSocket access patterns in README

Tested in K3s homelab:
- Thread env vars verified loaded in pod
- Liveness probe working without failures
- NetworkPolicy created successfully
- Application fully functional

--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -16,6 +16,14 @@ data:
   
   # Timezone
   TZ: "Asia/Kolkata"
+  # Thread limiting for scientific libraries (numpy, scipy, pandas)
+  # Prevents thread oversubscription in containerized environments
+  # Ref: Issue #787 - limits each library to single-threaded mode
+  OPENBLAS_NUM_THREADS: "1"
+  OMP_NUM_THREADS: "1"
+  MKL_NUM_THREADS: "1"
+  NUMEXPR_NUM_THREADS: "1"
+  NUMBA_NUM_THREADS: "1"
   
   # Add other non-sensitive environment variables here
   # Example:
