--- a/kubernetes/secrets-template.yaml
+++ b/kubernetes/secrets-template.yaml
@@ -22,13 +22,14 @@ stringData:
   # Example placeholder - replace with actual values:
   .env: |
     # OpenAlgo Configuration
+    #⚠️  CRITICAL: Replace ALL placeholder values before deploying!
     # Copy your .env file contents here
     # This is mounted as /app/.env in the container
     
     # Flask
     FLASK_ENV=production
     FLASK_DEBUG=0
-    SECRET_KEY=change-this-to-secure-random-string
+    SECRET_KEY=__REPLACE_WITH_RANDOM_STRING_REQUIRED__
     
     # Add your actual configuration below
     # BROKER_API_KEY=your-key
