--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -7,7 +7,9 @@ resources:
   - namespace.yaml
   - pvcs.yaml
   - configmap.yaml
-  - secrets-template.yaml  # Change to secrets.yaml after configuration
+  # secrets-template.yaml is intentionally NOT included here.
+  # Users MUST copy it to secrets.yaml and configure before deploying
+  # This prevents accidental deployment with placeholder credentials
   - statefulset.yaml
   - service.yaml
   - ingress.yaml
