Fix AI code review issues (cubic-dev-ai)
Issue #1 (P3): Image pull policy
- Changed to official image: marketcalls/openalgo:latest
- Set imagePullPolicy: Always (required for mutable :latest tag)

Issue #2 (P2): Missing secrets.yaml in kustomization
- Added secrets.yaml to resources list
- Added documentation comments for setup process

Issue #3 (P2): NetworkPolicy namespace selectors
- Fixed namespace selectors to use standard kubernetes.io/metadata.name
- Applied to both ingress-nginx and kube-system namespaces

All changes tested with kubectl kustomize validation.

--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -13,6 +13,8 @@ resources:
   - statefulset.yaml
   - service.yaml
   - ingress.yaml
+  - secrets.yaml
+  - networkpolicy.yaml
 
 # Common labels applied to all resources
 commonLabels:
