--- a/kubernetes/networkpolicy.yaml
+++ b/kubernetes/networkpolicy.yaml
@@ -18,7 +18,7 @@ spec:
   - from:
     - namespaceSelector:
         matchLabels:
-          name: ingress-nginx
+          kubernetes.io/metadata.name: ingress-nginx
     ports:
     - protocol: TCP
       port: 5000  # Web UI
